# evdoki-diploma

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vk-helpdesk-bot.md
app/: __init__.py  config.py  enums.py  main.py  runtime.py  states.py
app/db/: database.py  repository.py
app/handlers/: admin.py  common.py  create_ticket.py  fallback.py  user.py
app/keyboards/: admin.py  user.py
app/services/: notifications.py
app/utils/: access.py  formatting.py
tests/: test_repository.py
