[project]
name = "vk-helpdesk-bot"
version = "0.1.0"
description = "VK Helpdesk Bot для школы — приём и обработка заявок по техническим неполадкам"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vkbottle>=4.7.0,<5.0.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.0",
    "truststore>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
